Filler for Effects 08

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ animate: true
               healthy diet and physical activity. Don’t give cancer a chance.</p>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-effects hidden-xs">
-            <img class="img-responsive img-effects" src="{{ site.baseurl }}/images/effects/lungs-monoline.png">
+            <img class="img-responsive img-effects" src="{{ site.baseurl }}/images/lungs-monoline.png">
             <h2>Issue of the Heart</h2>
             <p>The chemicals in tobacco smoke harm your blood cells. Smoking raises blood pressure,
               which increases the risk of stroke. It can also can damage the function of your heart and the
