--- a/info.html
+++ b/info.html
@@ -113,7 +113,7 @@ animate: true
         </h1>
         <!-- Row 1 -->
         <div class="row">
-          <div class="col-lg-4 col-lg-offset-2 col-md-4 col-md-offset-2 col-sm-4 col-sm-offset-2 col-xs-12 col-xs-offset-0 col-effects">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-effects">
             <img class="img-responsive img-effects" src="{{ site.baseurl }}/images/effects/06.png">
             <h2>Weakened Immune System</h2>
             <p>Cigarette smoke contains high levels of tar and other chemicals, which can make your immune
