Header anchors fix trial

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ animate: true
         </div>
       </div>
       <div class="col-lg-12 text-center">
-        <a class="btn btn-default km-btn km-btn-lg">All Stories</a>
+        <a href="{{ site.baseurl }}/stories" class="btn btn-default km-btn km-btn-lg">All Stories</a>
       </div>
     </div>
   </div>
