--- a/story.html
+++ b/story.html
@@ -21,7 +21,7 @@ animate: true
               erat volutpat.
           </p>
 
-          <a class="a-arrow" href="{{ site.baseurl }}#content">
+          <a class="a-arrow" href="{{ site.baseurl }}/#content">
             <svg class="arrows">
               <path class="a1" d="M0 0 L30 20 L60 0"></path>
   						<!--path class="a1" d="M0 0 L30 32 L60 0"></path>
