Animations, styling for Info, href fixes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,44 @@ navHide: jumbotron
 allocateBottom: true
 slick: true
 animate: true
+
+numbers:
+ - part1: 'Smoking kills 10 Filipinos every hour due to cancer, stroke, lung and
+      heart diseases brought on by cigarette smoking.'
+   href: http://newsinfo.inquirer.net/61111/smoking-kills-10-filipinos-every-hour#ixzz42lUCEocR
+   hrefContent: 'World Health Organization'
+ - part1: 'Twenty­-eight percent or 17.3 million Filipino adults age 15 years and
+      older are current tobacco smokers, according to the results of the 2009 '
+   href: https://psa.gov.ph/content/173-million-filipino-adults-are-current-tobacco-smokers-final-results-2009-global-adult
+   hrefContent: 'Global Adult Tobacco Survey (GATS)'
+   part2: '.'
+ - part1: 'Filipinos mainly smoke cigarettes, which include manufactured cigarettes
+      and hand­rolled cigarettes. Cigarettes are smoked by 47 percent of men and
+      by 9 percent of women. On the average, male daily smokers consume 11 cigarettes
+      per day while female daily smokers consume 7 cigarettes per day.'
+   href: https://psa.gov.ph/content/173-million-filipino-adults-are-current-tobacco-smokers-final-results-2009-global-adult
+   hrefContent: 'Philippine Statistics Authority'
+
+effects:
+ - header: 'Weakened Immune System'
+   part1: Cigarette smoke contains high levels of tar and other chemicals, which
+      can make your immune system less effective at fighting off infections. This
+      means you're more likely to get sick, and are vulnerable to even the common
+      cold and the flu.
+ - header: A Chance for Cancer
+   part1: A single cigarette contains over 4,800 chemicals, 69 of which are known
+      to cause cancer. Smoking gives cancer a chance to take over your body and
+      increases the risks of getting more smoking- related diseases. Over 30% of
+      cancer could be prevented by avoiding tobacco and alcohol, having a healthy
+      diet and physical activity. Don’t give cancer a chance.
+ - header: 'Issue of the Heart'
+   part1: 'The chemicals in tobacco smoke harm your blood cells. Smoking raises
+      blood pressure, which increases the risk of stroke. It can also can damage
+      the function of your heart and the structure and function of your blood
+      vessels.  Although nicotine is the main active agent in cigarette smoke,
+      other chemicals and compounds such as tar and carbon monoxide are also
+      harmful to your heart in many ways.'
+
 ---
 
 <section id="jumbotron" class="km-jumbotron" style="background-image:url('{{ site.baseurl }}/images/bg.jpg')">
@@ -53,28 +91,20 @@ animate: true
           Stories
         </h1>
 
-        <div class="row">
+
+        {% for i in (1..6) %}
+        {% assign modulo = i | modulo: 3 %}
+        {% if modulo == 1 %}
+        <div class="row{% if i > 3 %} hidden-xs{% endif %}"{% if i > 3 %} style="margin-top:10px;"{% endif %}>
+        {% endif %}
           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 ">
             {% include panel-story.html %}
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 ">
-            {% include panel-story.html %}
-          </div>
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 ">
-            {% include panel-story.html %}
-          </div>
+        {% if modulo == 0 %}
         </div>
-        <div class="row hidden-xs" style="margin-top:10px;" >
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 ">
-            {% include panel-story.html %}
-          </div>
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 ">
-            {% include panel-story.html %}
-          </div>
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 ">
-            {% include panel-story.html %}
-          </div>
-        </div>
+        {% endif %}
+        {% endfor %}
+
       </div>
       <div class="col-lg-12 text-center">
         <a href="{{ site.baseurl }}/stories" class="btn btn-default km-btn km-btn-lg">All Stories</a>
@@ -91,7 +121,7 @@ animate: true
         <h1>
           The Campaign
         </h1>
-        <img class="img-logo img-responsive" src="{{ site.baseurl }}/images/logo-full.png">
+        <img class="img-logo img-responsive wow fadeInDown" src="{{ site.baseurl }}/images/logo-full.png">
 
         <div class="row row-limit-p">
           <div class="col-lg-12">
@@ -119,23 +149,21 @@ animate: true
         <h1>
           Smoking in Numbers
         </h1>
+        {% for number in page.numbers %}
+        {% assign modulo = forloop.index | modulo: 3 %}
+        {% if modulo == 1 %}
         <div class="row">
+        {% endif %}
           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-numbers">
-            <img class="img-responsive img-numbers" src="{{ site.baseurl }}/images/numbers/01.png">
-            <p>Smoking kills 10 Filipinos every hour due to cancer, stroke, lung and heart diseases brought on
-              by cigarette smoking. (World Health Organization)</p>
+            {% include item-number.html %}
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-numbers">
-            <img class="img-responsive img-numbers" src="{{ site.baseurl }}/images/numbers/02.png">
-            <p>Twenty­-eight percent or 17.3 million Filipino adults age 15 years and older are current tobacco
-              smokers, according to the results of the 2009 Global Adult Tobacco Survey (GATS).</p>
-          </div>
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-numbers hidden-xs">
-            <img class="img-responsive img-numbers" src="{{ site.baseurl }}/images/numbers/04.png">
-            <p>23 percent of Filipino adults are daily tobacco smokers: 38 percent for males and 7 percent for
-              females. (Philippine Statistics Authority)</p>
-          </div>
+        {% if modulo == 0 %}
         </div>
+        {% endif %}
+        {% endfor %}
+        {% if modulo != 0 %}
+        </div>
+        {% endif %}
       </div>
       <div class="col-lg-12 text-center">
         <a href="{{ site.baseurl }}/info" class="btn btn-default km-btn km-btn-lg">See More</a>
@@ -152,32 +180,23 @@ animate: true
         <h1>
           Effects of Smoking
         </h1>
+
+        {% for effect in page.effects %}
+        {% assign modulo = forloop.index | modulo: 3 %}
+        {% if modulo == 1 %}
         <div class="row">
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-effects">
-            <img class="img-responsive img-effects" src="{{ site.baseurl }}/images/effects/06.png">
-            <h2>Weakened Immune System</h2>
-            <p>Cigarette smoke contains high levels of tar and other chemicals, which can make your immune
-              system less effective at fighting off infections. This means you're more likely to get sick, and are
-              vulnerable to even the common cold and the flu.</p>
+        {% endif %}
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-numbers">
+            {% include item-effect.html %}
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-effects">
-            <img class="img-responsive img-effects" src="{{ site.baseurl }}/images/effects/07.png">
-            <h2>A Chance for Cancer</h2>
-            <p>A single cigarette contains over 4,800 chemicals, 69 of which are known to cause cancer.
-              Smoking gives cancer a chance to take over your body and increases the risks of getting more smoking-
-              related diseases. Over 30% of cancer could be prevented by avoiding tobacco and alcohol, having a
-              healthy diet and physical activity. Don’t give cancer a chance.</p>
-          </div>
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-effects hidden-xs">
-            <img class="img-responsive img-effects" src="{{ site.baseurl }}/images/lungs-monoline.png">
-            <h2>Issue of the Heart</h2>
-            <p>The chemicals in tobacco smoke harm your blood cells. Smoking raises blood pressure,
-              which increases the risk of stroke. It can also can damage the function of your heart and the
-              structure and function of your blood vessels.  Although nicotine is the main active agent in
-              cigarette smoke, other chemicals and compounds such as tar and carbon monoxide are also
-              harmful to your heart in many ways.</p>
-          </div>
+        {% if modulo == 0 %}
         </div>
+        {% endif %}
+        {% endfor %}
+        {% if modulo != 0 %}
+        </div>
+        {% endif %}
+
       </div>
       <div class="col-lg-12 text-center">
         <a href="{{ site.baseurl }}/info" class="btn btn-default km-btn km-btn-lg">See More</a>
