--- a/stories/story.html
+++ b/stories/story.html
@@ -21,7 +21,7 @@ animate: true
               erat volutpat.
           </p>
 
-          <a class="a-arrow" href="{{ site.baseurl }}/#content">
+          <a class="a-arrow" href="#content">
             <svg class="arrows">
               <path class="a1" d="M0 0 L30 20 L60 0"></path>
   						<!--path class="a1" d="M0 0 L30 32 L60 0"></path>
@@ -97,54 +97,12 @@ animate: true
         </h1>
 
         <div class="row">
+          {% for i in (1..3) %}
+          {% assign modulo = i | modulo: 3 %}
           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 ">
-            <a class="anchor-stories" href="{{ site.baseurl }}/story">
-              <div class="panel panel-default panel-stories">
-                <div class="panel-heading">
-                  <img class="img-responsive img-stories" src="{{ site.baseurl }}/images/filler-stories.jpg">
-                  <h3 class="h3-stories">Lorem ipsum dolor</h3>
-                </div>
-                <div class="panel-body">
-                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-                    diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-                    aliquam erat volutpat.</p>
-                </div>
-                <div class="panel-footer"><button class="btn btn-default km-btn btn-block">Read More &gt;</button></div>
-              </div>
-            </a>
+            {% include panel-story.html %}
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 ">
-            <a class="anchor-stories" href="{{ site.baseurl }}/story">
-              <div class="panel panel-default panel-stories">
-                <div class="panel-heading">
-                  <img class="img-responsive img-stories" src="{{ site.baseurl }}/images/filler-stories.jpg">
-                  <h3 class="h3-stories">Lorem ipsum dolor</h3>
-                </div>
-                <div class="panel-body">
-                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-                    diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-                    aliquam erat volutpat.</p>
-                </div>
-                <div class="panel-footer"><button class="btn btn-default km-btn btn-block">Read More &gt;</button></div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 ">
-            <a class="anchor-stories" href="{{ site.baseurl }}/story">
-              <div class="panel panel-default panel-stories">
-                <div class="panel-heading">
-                  <img class="img-responsive img-stories" src="{{ site.baseurl }}/images/filler-stories.jpg">
-                  <h3 class="h3-stories">Lorem ipsum dolor</h3>
-                </div>
-                <div class="panel-body">
-                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-                    diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-                    aliquam erat volutpat.</p>
-                </div>
-                <div class="panel-footer"><button class="btn btn-default km-btn btn-block">Read More &gt;</button></div>
-              </div>
-            </a>
-          </div>
+          {% endfor %}
         </div>
       </div>
     </div>
